<resources>
    <string name="app_name">EdUN</string>
    <string name="Usuario_string">Usuario</string>
    <string name="Contraseña_string">Contrasena</string>
    <string name="StringRegistrer"> Si no tiene una cuenta y desea registrarse de click aquí  </string>
    <string name="Continuar">Continuar</string>
    <string name="Formulario_Registro_Str">Formulario de Registro</string>
    <string name="ApellidoStr">Apellidos</string>
    <string name="Nombres"> Nombres </string>
    <string name="CuentaStr">Cuenta Unal</string>
    <string name="Contraseña">Contrasena</string>
    <string name="Welcome">Bienvenid@</string>
    <string name="a0001">Entrega_Trabajos_Estudiantes</string>
    <string name="Subir_Archivo_Apoyo_Str">Subir un archivo de apoyo</string>
    <string name="Archivos_De_Apoyo_Str">Buscar un archivo de apoyo</string>
    <string name="a0002">Crear Evento</string>
    <string name="a0003">Fecha</string>
    <string name="a0004">Hora</string>
    <string name="a0005">Nombre del evento</string>
    <string name="a0006">Profesor</string>
    <string name="a0007">Estudiante</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmar_Contrasena">Confirmar contrasena</string>
    <string name="finish">Terminar</string>
    <string name="Ver_Evento_Str">Ver Eventos</string>
    <string name="info_evento">Dato de la reunión</string>
</resources>
