<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.registro">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="97dp"
        android:layout_height="96dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/universidad_escudo" />

    <EditText
        android:id="@+id/Usuario_registro"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Usuario_string"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Formulario.String" />

    <Button
        android:id="@+id/btregistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Continuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tipo" />

    <EditText
        android:id="@+id/Nombres_Registro"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:hint="@string/Nombres"
        android:inputType="textPersonName"
        android:password="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Usuario_registro" />

    <EditText
        android:id="@+id/Apellidos_Registro"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"

        android:hint="@string/ApellidoStr"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombres_Registro" />

    <TextView
        android:id="@+id/Formulario.String"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#FFF"
        android:text="@string/Formulario_Registro_Str"
        android:textColor="#009688"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Contraseña_Registro"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Apellidos_Registro" />

    <RadioGroup
        android:id="@+id/Tipo"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contraseña_Registro">

        <RadioButton
            android:id="@+id/Profesor_radiobt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/a0006" />

        <RadioButton
            android:id="@+id/Estudiante_radiobt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/a0007" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>