<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Principal">

    <ImageView
        android:id="@+id/Escudo3"
        android:layout_width="97dp"
        android:layout_height="96dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:focusable="auto"
        android:hapticFeedbackEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/universidad_escudo" />

    <Button
        android:id="@+id/Estado_Entrega_btm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Subir_Archivo_Apoyo_Str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Archivos_de_apoyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Archivos_De_Apoyo_Str"
        app:layout_constraintBottom_toTopOf="@+id/Estado_Entrega_btm"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/a0005"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bot_hora" />

    <Button
        android:id="@+id/bt_fecha"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:text="@string/a0003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Caja_fecha"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/bt_fecha"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot_hora"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/a0004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_fecha" />

    <Button
        android:id="@+id/bt_crear_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/a0002"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/Caja_hora"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/bot_hora"
        app:layout_constraintTop_toBottomOf="@+id/Caja_fecha" />

</androidx.constraintlayout.widget.ConstraintLayout>