<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Subir_Archivo_De_Apoyo">

    <Button
        android:id="@+id/bt_fecha"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="60dp"
        android:text="@string/a0003"
        app:layout_constraintBottom_toTopOf="@+id/bot_hora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_fecha"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/bot_hora"
        app:layout_constraintTop_toBottomOf="@+id/caja_hora" />

    <EditText
        android:id="@+id/caja_hora"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/caja_fecha"
        app:layout_constraintStart_toEndOf="@+id/bt_fecha"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_crear_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/a0002"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bot_hora"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/a0004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_fecha" />

    <ImageButton
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

</androidx.constraintlayout.widget.ConstraintLayout>