<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.registro.registro1">

    <TextView
        android:id="@+id/apellidoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Apellidos_Registro" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="97dp"
        android:layout_height="96dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/universidad_escudo" />

    <EditText
        android:id="@+id/Usuario_registro"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="56dp"
        android:hint="@string/Usuario_string"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Formulario.String" />

    <Button
        android:id="@+id/continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:text="@string/Continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Nombres_Registro"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:hint="Nombre"
        android:inputType="textPersonName"
        android:password="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Usuario_registro" />

    <EditText
        android:id="@+id/Apellidos_Registro"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginStart="96dp"

        android:layout_marginTop="30dp"
        android:hint="Apellidos"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombres_Registro" />

    <TextView
        android:id="@+id/Formulario.String"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#FFF"
        android:text="@string/Formulario_Registro_Str"
        android:textColor="#009688"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/usuarioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Usuario_registro" />

    <TextView
        android:id="@+id/nombreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombres_Registro" />

</androidx.constraintlayout.widget.ConstraintLayout>